# pyFIES

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  PUBLISHING.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md  methodology.md  parity.md  quickstart.md
docs/api/: core.md  index.md  model.md  standards.md
docs/notebooks/: 01_parity_demo.ipynb
notebooks/: 01_parity_demo.ipynb
scripts/: build_demo_notebook.py  generate_r_fixtures.R
src/pyfies/: __init__.py  items.py  model.py  standards.py
src/pyfies/core/: __init__.py  cml.py  equating.py  gamma.py  person.py  prevalence.py
tests/: conftest.py  test_cml.py  test_gamma.py  test_parity_r.py
tests/fixtures/r_reference/: country1.json  country2.json  country3.json  country4.json
