[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "pyfies"
version = "0.1.1"
description = "Python implementation of FAO's Food Insecurity Experience Scale (FIES) — weighted Rasch model, equating to the global standard, and prevalence estimation for SDG indicator 2.1.2."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Nicholas E. Johnson", email = "nicholas.e.johnson@stonybrook.edu" },
]
keywords = [
    "FIES",
    "food insecurity",
    "Rasch model",
    "item response theory",
    "SDG 2.1.2",
    "FAO",
    "psychometrics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.8",
    "pre-commit>=3.5",
    "pandas-stubs>=2.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]
plot = [
    "matplotlib>=3.7",
]
notebooks = [
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "nbformat>=5.9",
    "nbconvert>=7.10",
    "ipykernel>=6.25",
]

[project.urls]
Homepage = "https://github.com/nejohnson2/pyFIES"
Issues = "https://github.com/nejohnson2/pyFIES/issues"
Documentation = "https://nejohnson2.github.io/pyFIES/"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfies"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "NPY"]
# N803/N806: numpy/sklearn convention uses uppercase for matrices (X, H, J).
# E501: long lines are fine for math expressions and citations.
ignore = ["E501", "N803", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true
